@@ -1,0 +1,20 @@
+<?php
+
+#########################################################################
+# config.php - localfark web interface config file                      #
+#########################################################################
+
+# show the forum?
+$SHOW_FORUM_LINK = false;
+
+# database options
+$DB_OPTS = array(
+  'user'  => 'USER',
+  'pass'  => 'PASS',
+  'host'  => 'localhost',
+  'db'    => 'DB',
+  'table' => 'TABLE',
+);
+
+?>
+
