@@ -48,3 +48,6 @@
 * Mon Sep 01 19:59:49 2003, pabs <pabs@pablotron.org>
   * merge in changes from 0.1.3 (everything above after incrementing
     version number)
+
+* Mon Sep 01 20:01:08 2003, pabs <pabs@pablotron.org>
+  * added web/config.php
